feat(app): added new UI screens, common utilities, and localization support
- Added animated splash screen
- Added dashboard screen with bottom navigation
   - Added habits screen with cards listing
   - Added Add/Edit habits functionality
   - Added floating action button
- Added level-up screen
- Added settings screen
   - Added dark mode with toggle functionality
   - Added reset all habits functionality
   - Added change streak emoji functionality

- In Common Package
   - Added Const Data directory
      - Added app constants for static data
   - Added Utils package
      - Added extensions
         - Added color opacity extension
         - Added required field extension
      - Added input formatters
         - Added input formatters list
         - Added trim text formatter
      - Added dialog utils
      - Added service utils
      - Added validators
   - Added Widgets
      - Added bubble background animation
      - Added primary text form field
      - Added typewriter text

- In Translation Package
   - Added strings for app localization

--- a/packages/translations/lib/l10n/arb/app_en.arb
+++ b/packages/translations/lib/l10n/arb/app_en.arb
@@ -1,4 +1,17 @@
 {
   "levelup": "LevelUp",
-  "levelUpYourHabits": "Level up your habits\nMake every day a win!"
+  "levelUpYourHabits": "Level up your habits\nMake every day a win!",
+
+  "streak": "Streak: ",
+  "addNewHabit": "Add New Habit",
+  "habitName": "Habit Name",
+  "hintHabitName": "e.g., Drink Water",
+  "emptyHabitName": "Please enter habit name",
+  "pickColor": "Pick a Color",
+  "pickEmoji": "Pick an Emoji",
+  "preview": "Preview",
+  "saveHabit": "Save Habit",
+  "noHabitsYet": "No habits yet. Tap + to add one.",
+  "sayGoodbyeTo": "Say Goodbye to This Habit?",
+  "deletingWillErase": "Deleting will erase your streak history and progress?"
 }
