feat(app): enhance Level Up Screen with new features, animated backgrounds for all screens, and localization
- Added class header comments

- Habit Screen
  - Updated streak functionality
  - Added animated background

- Level Up Screen
  - Added animated background
  - Added stats card
  - Added best habit card
  - Added new features:
     - Total days
     - Committed habits
     - Current streak
     - Best streak
     - Best habits list

- Settings Screen
  - Added animated background

- Common Package
  - Added new string in AppConst
  - Added animated background widgets:
     - Animated habits background
     - Animated level up background
     - Animated settings background

- Translation Package
  - Added new strings for app localization

--- a/packages/translations/lib/l10n/arb/app_en.arb
+++ b/packages/translations/lib/l10n/arb/app_en.arb
@@ -22,6 +22,15 @@
   "delete": "Delete",
   "cancel": "Cancel",
 
+  "stats": "Stats",
+  "totalDays": "TOTAL DAYS",
+  "days": "days",
+  "committedHabits": "COMMITTED HABITS",
+  "habitsTwo": "habits",
+  "currentStreak": "CURRENT STREAK",
+  "bestStreak": "BEST STREAK",
+  "bestHabits": "BEST HABITS",
+
   "themeModeTitle": "Choose Your Realm",
   "themeModeSubtitle": "Step into the realm that suits you.",
   "respawn": "Respawn",
